--- a/src/Guards/Guards.csproj
+++ b/src/Guards/Guards.csproj
@@ -12,7 +12,7 @@
         <PackageOutputPath>C:\Users\romke\source\nupkgs</PackageOutputPath>
 
         <PackageId>DA.Guards</PackageId>
-        <Version>1.0.0</Version>
+        <Version>1.0.1</Version>
         <Authors>Dutch Antimony</Authors>
         <Description>DA.Guards is a basic Guard (Ensure) implementation for C#</Description>
         <Copyright>Copyright © DutchAntimony 2024</Copyright>
@@ -34,5 +34,9 @@
 
     <ItemGroup>
         <None Include="..\..\README.md" Pack="true" PackagePath="/" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
     </ItemGroup>
 </Project>
